# dita

./: .gitignore  CLAUDE.md  Makefile  README.md  audio.py  backend.py  build-deb.sh  config.json  config.py  dita.desktop  dita_0.1.0_amd64.deb  hotkey.py  install.sh  main.py  pyproject.toml  run.sh  transcriber.py
.github/workflows/: ci.yml  release.yml
dita/: audio.py  backend.py  config.py  hotkey.py  main.py  tray.py
docs/: api-contract.md  architecture.md  conventions.md  risks.md  spec.md
frontend/: app.js  index.html  style.css
packaging/: build-deb.sh  dita.desktop
scripts/: pre-push  release.sh
tasks/: README.md  T01-audio.md  T02-transcriber.md  T03-backend.md  T04-main.md  T05-frontend-html.md  T06-frontend-js.md  T07-packaging.md  T08-tests.md
tests/: test_config.py
